--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,9 @@ name: Java CI/CD com Docker e GitOps
 
 # Triggers: O que dispara a action
 on:
-  # Executa em pushes para a branch 'main'
   push:
-    branches: [ "main" ]
-  # Executa em Pull Requests que miram a branch 'main'
+    branches: [ "main" ] # Para pushes em main, manter a tag 'latest'
+    tags: [ 'v*.*.*' ] # Disparar quando uma tag vX.Y.Z for criada e enviada
   pull_request:
     branches: [ "main" ]
 
@@ -37,14 +36,19 @@ jobs:
   ##################################################
   # Job 2: Build e Push da Imagem Docker          #
   # Este job só roda se o primeiro for bem sucedido #
-  # e se o evento for um push na branch 'main'.     #
+  # e se o evento for um push na branch 'main' ou uma tag. #
   ##################################################
   build_and_push_docker:
     name: Build e Push da Imagem Docker
     runs-on: ubuntu-latest
     needs: build_and_test
-    # Condição: Só executa em pushes para a branch 'main'
-    if: github.ref == 'refs/heads/main'
+    # Condição: Só executa em pushes para a branch 'main' OU para tags
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    
+    # Define a versão da imagem: usa a tag Git se for um evento de tag, senão usa o SHA
+    env:
+      IMAGE_VERSION: ${{ github.ref_type == 'tag' && github.ref_name || format('sha-{0}', github.sha) }}
+
     steps:
       - name: "Checkout do código da aplicação"
         uses: actions/checkout@v3
@@ -60,26 +64,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          # CRIE ESSES SECRETS NAS CONFIGURAÇÕES DO SEU REPOSITÓRIO NO GITHUB
-          # Settings -> Secrets and variables -> Actions
-
-      - name: "Gera a tag da imagem"
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ojasonw/my-java-app # Substitua 'ojasonw' pelo seu usuário no Docker Hub
-          # Gera duas tags: 'latest' e 'sha-<hash_do_commit>'
-          tags: |
-            type=sha,prefix=,format=short
-            type=raw,value=latest
 
       - name: "Build e Push da imagem"
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          # Adicionar a tag 'latest' apenas em pushes para a branch principal
+          tags: |
+            ojasonw/my-java-app:${{ env.IMAGE_VERSION }}
+            ojasonw/my-java-app:latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
 
   ########################################################
   # Job 3: Abre um PR no Repositório GitOps             #
@@ -89,33 +83,37 @@ jobs:
     name: Atualiza Repositório GitOps
     runs-on: ubuntu-latest
     needs: build_and_push_docker
+    # Condição: Só executa se for um push para a branch 'main' OU uma tag.
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    
+    # Define a versão da imagem: usa a tag Git se for um evento de tag, senão usa o SHA
+    env:
+      IMAGE_VERSION: ${{ github.ref_type == 'tag' && github.ref_name || format('sha-{0}', github.sha) }}
+
     steps:
       - name: "Checkout do repositório GitOps (platform-gitops)"
         uses: actions/checkout@v3
         with:
           repository: ojasonw/platform-gitops
-          # Precisa de um token para poder fazer push de uma nova branch e criar o PR.
-          # CRIE ESSE SECRET NO GITHUB: use um Personal Access Token (PAT) com escopo 'repo'.
           token: ${{ secrets.GITOPS_PAT }}
 
       - name: "Atualiza a tag da imagem no kustomization.yaml de dev"
         run: |
-          # Navega para o diretório correto
           cd apps/my-service/overlays/dev
-          # Usa 'sed' para substituir a linha da imagem.
-          # Este comando assume que a imagem já está definida no kustomization.yaml
-          # e apenas substitui a 'newTag'. Adicione o bloco 'images' se ele não existir.
-          sed -i "s/newTag: .*/newTag: sha-${{ github.sha }}/" kustomization.yaml
+          # Usa 'sed' para substituir a newTag pela IMAGE_VERSION
+          sed -i "s/newTag: .*/newTag: ${{ env.IMAGE_VERSION }}/" kustomization.yaml
           
-
+          # NOTA: A lógica para oldTag é mais complexa e requer ferramentas como 'yq'
+          # ou um script mais elaborado para manipular YAML sem quebrar.
+          # Por enquanto, vamos manter apenas a atualização do newTag.
 
       - name: "Cria um Pull Request"
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.GITOPS_PAT }}
-          commit-message: "Update image tag for my-service to sha-${{ github.sha }}"
-          title: "CI: Atualiza imagem do my-service para sha-${{ github.sha }}"
+          commit-message: "Update image tag for my-service to ${{ env.IMAGE_VERSION }}"
+          title: "CI: Atualiza imagem do my-service para ${{ env.IMAGE_VERSION }}"
           body: "Atualização automática da imagem pela GitHub Action."
-          branch: "update-image-my-service-${{ github.sha }}"
+          branch: "update-image-my-service-${{ env.IMAGE_VERSION }}"
           base: "main"
           delete-branch: true
