--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=joga-together
 ##DB
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://postgresql-dev.dev-infra.svc.cluster.local:5432/joga-db
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=hlUU2yiAqEFBujBS95FW
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql: true
